--- a/src/index.html
+++ b/src/index.html
@@ -1,43 +1,28 @@
-<head>
-    <meta charset="utf-8">
-    <link href="./output.css" rel="stylesheet">
-    <script src="../index.js"></script>
-</head>
-<body class="bg-black">
-    <div class="flex flex-col w-full h-screen mt-5">
-        <div class="flex justify-center mt-1 gap-1" id="col-1">
-            <div class="bg-gray-500 w-16 h-16 flex justify-center items-center">
-                <div class="text-5xl font-bold text-white">h</div>
-            </div>
-            <div class="bg-yellow-500 w-16 h-16 flex justify-center items-center">
-                <div class="text-5xl font-bold text-white">h</div>
-            </div>
-            <div class="bg-gray-500 w-16 h-16 flex justify-center items-center">
-                <div class="text-5xl font-bold text-white">h</div>
-            </div>
-            <div class="bg-gray-500 w-16 h-16 flex justify-center items-center">
-                <div class="text-5xl font-bold text-white">h</div>
-            </div>
-            <div class="bg-gray-500 w-16 h-16 flex justify-center items-center">
-                <div class="text-5xl font-bold text-white">h</div>
-            </div>
-        </div>
-        <div class="flex justify-center mt-1 gap-1">
-            <div class="bg-gray-500 w-16 h-16 flex justify-center items-center">
-                <div class="text-5xl font-bold text-white">h</div>
-            </div>
-            <div class="bg-gray-500 w-16 h-16 flex justify-center items-center">
-                <div class="text-5xl font-bold text-white">h</div>
-            </div>
-            <div class="bg-gray-500 w-16 h-16 flex justify-center items-center">
-                <div class="text-5xl font-bold text-white">h</div>
-            </div>
-            <div class="bg-gray-500 w-16 h-16 flex justify-center items-center">
-                <div class="text-5xl font-bold text-white">h</div>
-            </div>
-            <div class="bg-gray-500 w-16 h-16 flex justify-center items-center">
-                <div class="text-5xl font-bold text-white">h</div>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <link href="./output.css" rel="stylesheet">
+        <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.8/dist/cdn.min.js"></script>
+    </head>
+    <body class="">
+        <div class="flex flex-col mt-5">
+            <div class="flex justify-center mt-1 gap-1" id="col-1">
+                <div class="bg-gray-500 w-16 h-16 flex justify-center items-center">
+                    <div class="text-5xl font-bold text-white">h</div>
+                </div>
+                <div class="bg-yellow-500 w-16 h-16 flex justify-center items-center">
+                    <div class="text-5xl font-bold text-white">h</div>
+                </div>
+                <div class="bg-gray-500 w-16 h-16 flex justify-center items-center">
+                    <div class="text-5xl font-bold text-white">h</div>
+                </div>
+                <div class="bg-gray-500 w-16 h-16 flex justify-center items-center">
+                    <div class="text-5xl font-bold text-white">f</div>
+                </div>
+                <div class="bg-gray-500 w-16 h-16 flex justify-center items-center">
+                    <div class="text-5xl font-bold text-white">h</div>
+                </div>
             </div>
         </div>
-    </div>
-</body>
+    </body>
+</html>
