--- a/src/index.html
+++ b/src/index.html
@@ -5,24 +5,16 @@
         <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.8/dist/cdn.min.js"></script>
     </head>
     <body class="">
-        <div class="flex flex-col mt-5">
-            <div class="flex justify-center mt-1 gap-1" id="col-1">
-                <div class="bg-gray-500 w-16 h-16 flex justify-center items-center">
-                    <div class="text-5xl font-bold text-white">h</div>
+        <div class="flex flex-col mt-5" x-data="{ rows: [1 , 2, 3, 4, 5, 6], cols: [1, 2, 3, 4, 5] }">
+            <template x-for="row in rows">
+                <div class="flex justify-center mt-1 gap-1" id="col-1">
+                    <template x-for="col in cols">
+                        <div class="bg-gray-500 w-16 h-16 flex justify-center items-center">
+                            <div class="text-5xl font-bold text-white" x-text="col"></div>
+                        </div>
+                    </template>
                 </div>
-                <div class="bg-yellow-500 w-16 h-16 flex justify-center items-center">
-                    <div class="text-5xl font-bold text-white">h</div>
-                </div>
-                <div class="bg-gray-500 w-16 h-16 flex justify-center items-center">
-                    <div class="text-5xl font-bold text-white">h</div>
-                </div>
-                <div class="bg-gray-500 w-16 h-16 flex justify-center items-center">
-                    <div class="text-5xl font-bold text-white">f</div>
-                </div>
-                <div class="bg-gray-500 w-16 h-16 flex justify-center items-center">
-                    <div class="text-5xl font-bold text-white">h</div>
-                </div>
-            </div>
+            </template>
         </div>
     </body>
 </html>
