--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,24 @@
         <link href="./output.css" rel="stylesheet">
         <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.8/dist/cdn.min.js"></script>
     </head>
-    <body class="">
-        <div class="flex flex-col mt-5" x-data="{ rows: [1 , 2, 3, 4, 5, 6], cols: [1, 2, 3, 4, 5] }">
+    <body class="flex flex-col items-center bg-black" x-data="{ word: [] }">
+        <div class="flex flex-col mt-5"
+             x-data="{ rows: [1 , 2, 3, 4, 5, 6], cols: { 0: word[0], 1: word[1], 2: word[2], 3: word[3], 4: word[4] } }">
             <template x-for="row in rows">
                 <div class="flex justify-center mt-1 gap-1" id="col-1">
-                    <template x-for="col in cols">
-                        <div class="bg-gray-500 w-16 h-16 flex justify-center items-center">
-                            <div class="text-5xl font-bold text-white" x-text="col"></div>
+                    <template x-for="(value, index) in cols">
+                        <div class="bg-gray-500 w-14 h-14 flex justify-center items-center">
+                            <div class="text-4xl font-bold text-white" x-text="word[index]"></div>
                         </div>
                     </template>
                 </div>
             </template>
+        </div>
+        <div class="mt-15">
+            <input class="border border-white text-white"
+                   type="text"
+                   x-model="word"
+                   maxlength="5">
         </div>
     </body>
 </html>
