--- a/src/index.html
+++ b/src/index.html
@@ -5,21 +5,22 @@
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.8/dist/cdn.min.js"></script>
 </head>
 <body class="bg-black" x-data="updateWord">
-    <div class="flex flex-col items-center">
-        <div class="flex flex-col mt-5"
-             x-data="{  }">
-            <template x-for="row in rows">
-                <div class="flex justify-center mt-1 gap-1">
-                    <template x-for="(value, index) in cols">
-                        <div class="bg-gray-500 w-14 h-14 flex justify-center items-center">
-                            <template x-if="row === count">
-                                <div class="text-4xl font-bold text-white" x-text="word[index]"></div>
-                            </template>
-                        </div>
-                    </template>
-                </div>
-            </template>
-            <div class="my-10">
+    <div class="flex flex-col items-center relative">
+        <div class="flex flex-col mt-5">
+            <div class="relative">
+                <template x-for="row in rows">
+                    <div class="flex justify-center mt-1 gap-1">
+                        <template x-for="(value, index) in cols">
+                            <div class="bg-gray-500 w-14 h-14 flex justify-center items-center">
+                                <template x-if="row === count">
+                                    <div class="text-4xl font-bold text-white relative z-20" x-text="word[index]"></div>
+                                </template>
+                            </div>
+                        </template>
+                    </div>
+                </template>
+            </div>
+            <div class="absolute top-0 mt-5 z-10">
                 <template x-for="row in rows">
                     <div class="flex justify-center mt-1 gap-1">
                         <template x-for="(value, index) in cols">
