compare with hard-coded word

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
                 <template x-for="row in rows">
                     <div class="flex justify-center mt-1 gap-1">
                         <template x-for="(value, index) in cols">
-                            <div class="bg-gray-500 w-14 h-14 flex justify-center items-center">
+                            <div class="bg-gray-500 w-14 h-14 flex justify-center items-center z-10">
                                 <template x-if="row === count">
                                     <div class="text-4xl font-bold text-white relative z-20" x-text="word[index]"></div>
                                 </template>
@@ -25,13 +25,13 @@
                     <div class="flex justify-center mt-1 gap-1">
                         <template x-for="(value, index) in cols">
                             <div class="bg-gray-500 w-14 h-14 flex justify-center items-center">
-                                <template x-if="row === 1">
+                                <template x-if="row === 0">
                                     <div class="text-4xl font-bold text-white" x-text="buffer[0][index]"></div>
                                 </template>
-                                <template x-if="row === 2">
+                                <template x-if="row === 1">
                                     <div class="text-4xl font-bold text-white" x-text="buffer[1][index]"></div>
                                 </template>
-                                <template x-if="row === 3">
+                                <template x-if="row === 2">
                                     <div class="text-4xl font-bold text-white" x-text="buffer[2][index]"></div>
                                 </template>
                             </div>
@@ -42,6 +42,7 @@
         </div>
         <div class="mt-15">
             <input class="border border-white text-white"
+                   id="textInput"
                    type="text"
                    x-model="word"
                    maxlength="5">
@@ -49,6 +50,12 @@
         <button class="bg-red-500 text-white p-4 my-4 rounded-md cursor-pointer" x-on:click="increase()">
             increase
         </button>
+        <div class="bg-green-500 text-white p-4 my-4 rounded-md" x-show="checker">
+            <span>You guessed the word</span>
+        </div>
+        <div class="bg-red-500 text-white p-4 my-4 rounded-md" x-show="outOfTries">
+            <span>You ran out of tries</span>
+        </div>
     </div>
 </body>
 </html>
@@ -56,11 +63,14 @@
 <script>
     document.addEventListener('alpine:init', () => {
         Alpine.data('updateWord', () => ({
-            count: 1,
+            count: 0,
             word: [],
             buffer: [],
-            rows: [1 , 2, 3],
-            cols: [1, 2, 3, 4, 5],
+            rows: [0 , 1, 2],
+            cols: [0, 1, 2, 3, 4],
+            correctWord: 'kotka',
+            checker: false,
+            outOfTries: false,
 
             increase() {
                 if (this.word.length < 5) {
@@ -68,7 +78,18 @@
                 } else {
                     this.count++;
                     this.buffer.push(this.word);
-                    this.buffer[this.count-2].split('');
+                    this.buffer[this.count-1].split('');
+
+                    if (this.buffer[this.count-1] === this.correctWord) {
+                        this.checker = true;
+                        document.getElementById('textInput').disabled = true;
+                    }
+
+                    if (this.count > 2 && this.buffer[this.count-1] !== this.correctWord) {
+                        this.outOfTries = true;
+                        document.getElementById('textInput').disabled = true;
+                    }
+
                     this.word = '';
                 }
             }
