--- a/src/index.html
+++ b/src/index.html
@@ -24,16 +24,8 @@
                 <template x-for="row in rows">
                     <div class="flex justify-center mt-1 gap-1">
                         <template x-for="(value, index) in cols">
-                            <div class="bg-gray-500 w-14 h-14 flex justify-center items-center">
-                                <template x-if="row === 0">
-                                    <div class="text-4xl font-bold text-white" :id="$id('word-1-input')" x-text="buffer[0][index]"></div>
-                                </template>
-                                <template x-if="row === 1">
-                                    <div class="text-4xl font-bold text-white" :id="$id('word-2-input')" x-text="buffer[1][index]"></div>
-                                </template>
-                                <template x-if="row === 2">
-                                    <div class="text-4xl font-bold text-white" :id="$id('word-3-input')" x-text="buffer[2][index]"></div>
-                                </template>
+                            <div class="bg-gray-500 w-14 h-14 flex justify-center items-center" :id="$id('word-'+ row +'-input')" x-data="console.log('word-'+ row +'-input')">
+                                <div class="text-4xl font-bold text-white" x-text="buffer[row][index]"></div>
                             </div>
                         </template>
                     </div>
@@ -102,7 +94,6 @@
             checkWord() {
                 for (let i = 1; i <= 5; i++) {
                     if (this.correctWord[0][i-1] === this.buffer[this.count-1][i-1]) {
-                        console.log(this.count);
                         if (this.buffer[this.count-1][i-1]) {
                             document.getElementById('word-' + this.count + '-input-' + i).classList.add('bg-green-500');
                         }
