--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.8/dist/cdn.min.js"></script>
 </head>
 <body class="bg-gray-900" x-data="updateWord">
-    <div class="flex flex-col items-center relative">
+    <div class="flex flex-col items-center relative" x-init="getWord()">
         <div class="flex flex-col mt-5">
             <div class="relative">
                 <template x-for="row in rows">
@@ -60,7 +60,7 @@
             buffer: [],
             rows: [0, 1, 2, 3, 4, 5],
             cols: [0, 1, 2, 3, 4],
-            correctWord: ['kotka'],
+            correctWord: [],
             checker: false,
             outOfTries: false,
 
@@ -104,6 +104,20 @@
                         }
                     }
                 }
+            },
+
+            async getWord() {
+                try {
+                    fetch('https://cheaderthecoder.github.io/5-Letter-words/words.json')
+                        .then(res => res.json())
+                        .then(data => {
+                            this.correctWord.push(data.words[Math.floor(Math.random() * 5757)]);
+                        })
+                } catch (error) {
+                    console.log(error.message);
+                }
+
+                console.log(this.correctWord);
             }
         }))
     })
